[gd_scene load_steps=11 format=3 uid="uid://crbjhy8uur0h6"]

[ext_resource type="Texture2D" uid="uid://0udqjjjv30an" path="res://assets/marte/inimigo.png" id="1_fwrr6"]
[ext_resource type="Script" uid="uid://cs401im7nl7hr" path="res://scripts/marte/inimigo_marte_crr.gd" id="1_k1vwv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k1vwv"]
atlas = ExtResource("1_fwrr6")
region = Rect2(0, 0, 153, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_na5bf"]
atlas = ExtResource("1_fwrr6")
region = Rect2(153, 0, 153, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj6ps"]
atlas = ExtResource("1_fwrr6")
region = Rect2(306, 0, 153, 341)

[sub_resource type="AtlasTexture" id="AtlasTexture_alej4"]
atlas = ExtResource("1_fwrr6")
region = Rect2(459, 0, 153, 341)

[sub_resource type="SpriteFrames" id="SpriteFrames_gyhxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1vwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na5bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj6ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alej4")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62448"]
size = Vector2(31, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egvhp"]
size = Vector2(37, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1mij"]
size = Vector2(32, 52)

[node name="inimigo" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
slide_on_ceiling = false
platform_floor_layers = 4294967040
script = ExtResource("1_k1vwv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.39583343, 0.3489736)
sprite_frames = SubResource("SpriteFrames_gyhxj")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14.5, 15)
shape = SubResource("RectangleShape2D_62448")

[node name="stomp_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stomp_area"]
position = Vector2(-12, -17)
shape = SubResource("RectangleShape2D_egvhp")

[node name="hurt_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_area"]
position = Vector2(-15, 17)
shape = SubResource("RectangleShape2D_c1mij")

[node name="wall_check" type="RayCast2D" parent="."]
position = Vector2(1, 34)
target_position = Vector2(13, 0)
collision_mask = 6
